# conways-game-of-languages

./: .gitignore  README.md
python/: README.md  pyproject.toml
python/conway/: __main__.py  cli.py  grid.py
python/conway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
rust/: Cargo.toml  README.md
rust/data/: Blinker.ron
rust/src/: alive_cells.rs  conway.rs  lib.rs  main.rs  pattern.rs
rust/tests/: integration_test.rs
zig/: README.md  build.zig
zig/src/: conway.zig  integration_test.zig  main.zig
