[package]
name = "conways-game-of-languages"
version = "0.2.0"
edition = "2021"
description = "Conway's Game of Life written in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.25.0"
ron = "0.8"
serde = {version = "1.0", features = ["derive"]}
